k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: webshell-ws
    nginx.org/websocket-services: webshell-ws
spec:
  tls:
  - hosts:
    - playground.rlay.cc
    - playground-ws.rlay.cc
    secretName: letsencrypt-production
  rules:
  - host: playground.rlay.cc
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webshell-front
              port:
                number: 8080
  - host: playground-ws.rlay.cc
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webshell-ws
              port:
                number: 8081
